website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  namespace: website
  labels:
    name: flask
spec:
  replicas: 3
  selector:
    matchLabels:
      name: flask
  template:
    metadata:
      name: flask
      labels:
        name: flask
    spec:
      containers:
        - name: flask
          image: nashluffy/flask
          ports:
          - name: https
            containerPort: 8080
            hostPort: 443
          resources:
            requests:
              memory: 256Mi
            limits:
              memory: 512Mi
