website/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: public
  labels:
    app: flask
  name: flask
  namespace: website
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 107.15.131.56
  ports:
  - protocol: TCP
    name: website-http
    port: 80
  selector:
    name: flask
  sessionAffinity: None
  type: LoadBalancer
