website/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: website-ingress
  namespace: website
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - nashluffman.com
    - www.nashluffman.com
    secretName: website-tls
  rules:
  - host: nashluffman.com
    http:
      paths:
      - path: /
        backend:
          serviceName: flask-service
          servicePort: 80
